# Biologic

./: .gitignore  ARCHITECTURE.md  Biologic.csproj  BiologicSystem.cs  ECLabAutomation.cs  ECLabPathResolver.cs  ECLabSequenceDispatcher.cs  ECLabSequenceDispatcherTests.cs  ECLabSystem.cs  METHOD_PARAMETERS.md  MethodParameters.cs  REPOSITORY_MANAGEMENT.md
Client-demo/: main.py  opcua_app.py  opcua_connect.py  requirements.txt
Client-demo/pages/: 1_Connect.py
Communications/: ECLabCommunication.cs
Devices/: ECLabDevice.cs
EC-Lab Development Package/: EC-Lab Development Package.md
EC-Lab Development Package/Examples/C-C++/: CMakeLists.txt  build.bat
EC-Lab Development Package/Examples/C-C++/cmake/: oem_package.cmake
EC-Lab Development Package/Examples/C-C++/device_and_channel_info/: CMakeLists.txt  main.cpp
EC-Lab Development Package/Examples/C-C++/include/: BLFunctions.h  BLStructs.h
EC-Lab Development Package/Examples/C-C++/technique_ca/: CMakeLists.txt  main.cpp
EC-Lab Development Package/Examples/C-C++/technique_cp/: CMakeLists.txt  main.cpp
EC-Lab Development Package/Examples/C-C++/technique_ocv/: CMakeLists.txt  main.cpp
EC-Lab Development Package/Examples/LabVIEW/V22/: LV_OEM Package.lvproj
EC-Lab Development Package/Examples/LabVIEW/V22/SimpleExamples/: ca.vi  casg.vi  cp.vi  geis.vi  iscan.vi  mp.vi  ocv.vi  peis.vi  sccx.vi  sgeis.vi  speis.vi  vscan.vi
EC-Lab Development Package/Examples/Python/: ex_api_misc.py  ex_blfind.py  ex_tech_CP.py  ex_tech_OCV.py
EC-Lab Development Package/Examples/Python/kbio/: c_utils.py  kbio_api.py  kbio_tech.py  kbio_types.py  tech_types.py  utils.py
Native/: ECLibApi.cs  ECLibNative.cs  ECLibTypes.cs  IECLibNative.cs  MockECLibNative.cs  RealECLibNative.cs  TechniqueId.cs
SequenceItems/: ChargeSequenceItem.cs  ConnectDeviceSequenceItem.cs  DischargeSequenceItem.cs  DisconnectDeviceSequenceItem.cs  ForceStopBiologicChannelSequenceItem.cs  GEISSequenceItem.cs  GetDataSequenceItem.cs  LoadFirmwareSequenceItem.cs  LoadTechniqueSequenceItem.cs  PEISSequenceItem.cs  README.md  StartChannelSequenceItem.cs  StartPollingSequenceItem.cs  StopChannelSequenceItem.cs  StopPollingSequenceItem.cs  WaitForCompletionSequenceItem.cs
Techniques/: AdvancedTechniqueParameters.cs  TechniqueParameterBuilder.cs  TechniqueParameters.cs
